--- a/index.html
+++ b/index.html
@@ -6,8 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Online Wear</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" href="images/icon.jpg" type="image/x-icon">
 </head>
 <body>
+    <div class="cover">
+        <img id="imageO" src="images/cover.jpeg" alt="">
+        <div class="topright">Top Right</div>
+        <img id="imageT" src="images/sale4.jpg" alt="">
+    </div>
     
 </body>
 </html>
